fixed an issue with news, box-shadow and overflow

--- a/css/style.css
+++ b/css/style.css
@@ -519,9 +519,6 @@ blockquote, figcaption {
       [class^="module-news-header"] a, [class^="module-services-header"] a {
         display: block; } }
 
-[class^="module-news-article-"], [class^="module-services-item-container-"] {
-  box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.1); }
-
 .btn-readmore, .module-news-tag, .btn-sidenav-toggle, .btn-support, .btn-contact, .module-partners-flex a, .input-search-2 button, [class^="btn-social-media"], [class^="module-welcome-button-"], [class^="button-banner"], .btn-live-chat, .btn-call-netmatters {
   display: inline-flex;
   align-items: center;
@@ -1345,12 +1342,19 @@ footer {
       grid-template-columns: repeat(2, 1fr);
       grid-template-rows: 1fr;
       grid-auto-rows: 0;
-      overflow-y: hidden; } }
+      overflow-y: hidden;
+      padding-bottom: 0; }
+      .module-news-articles [class^="module-news-article-"]:nth-child(n + 3) {
+        box-shadow: 0 0 0 0; } }
   @media (min-width: 1260px) {
     .module-news-articles {
-      grid-template-columns: repeat(3, 1fr); } }
+      grid-template-columns: repeat(3, 1fr);
+      padding-bottom: 15px; }
+      .module-news-articles [class^="module-news-article-"]:nth-child(n + 3) {
+        box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.1); } }
 
 [class^="module-news-article-"] {
+  box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.1);
   position: relative;
   z-index: 1;
   position: relative;
@@ -1429,6 +1433,7 @@ footer {
       display: none; } }
 
 [class^="module-services-item-container-"] {
+  box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.1);
   border: 1px solid #ccc;
   border-radius: 15px;
   padding: 30px;
