--- a/scss/modules/_extends.scss
+++ b/scss/modules/_extends.scss
@@ -54,8 +54,3 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-// Section Box-Shadows
-%box-shadow {
-  box-shadow: 0 0 5px 3px palette(general, box-shadow);
-}
