--- a/scss/modules/_news.scss
+++ b/scss/modules/_news.scss
@@ -24,16 +24,26 @@
     grid-template-rows: 1fr;
     grid-auto-rows: 0;
     overflow-y: hidden;
+    // This is a bad hack to not show hidden items that have border shadows.
+    padding-bottom: 0;
+    [class^="module-news-article-"]:nth-child(n + 3) {
+      box-shadow: 0 0 0 0;
+    }
   }
   @include mq(xl) {
     grid-template-columns: repeat(3, 1fr);
+    // This is a bad hack to not show hidden items that have border shadows.
+    padding-bottom: $global-padding;
+    [class^="module-news-article-"]:nth-child(n + 3) {
+      @include box-shadow;
+    }
   }
 }
 
 // Single Article
 [class^="module-news-article-"] {
   @extend %flex-column;
-  @extend %box-shadow;
+  @include box-shadow;
   position: relative;
   z-index: 1;
   @include hover-lift;
