--- a/scss/modules/_services.scss
+++ b/scss/modules/_services.scss
@@ -38,7 +38,7 @@
 // Container styling
 [class^="module-services-item-container-"] {
   @extend %text-remove-decoration;
-  @extend %box-shadow;
+  @include box-shadow;
   border: 1px solid $br--color;
   border-radius: $br--radius-large;
   padding: 30px;
